--- a/src/style.css
+++ b/src/style.css
@@ -195,14 +195,19 @@ body {
   background: var(--primaryColor);
 }
 
-#message {
+.toast {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   margin: 10px 0;
   color: var(--secondaryFontColor);
   font-size: 0.85rem;
   border-left: 3px solid var(--tertiaryColor);
   padding: 0px 5px;
-  display: flex;
-  align-items: center;
+}
+
+.toast .button {
+  transform: scale(0.8);
 }
 
 footer .action {
