--- a/src/style/main.css
+++ b/src/style/main.css
@@ -38,6 +38,10 @@ body {
   border-radius: 4px;
 }
 
+.button:hover {
+  background: var(--secondaryColor);
+}
+
 .button:focus-visible {
   background: var(--secondaryColor);
 }
