--- a/src/style/widgets.css
+++ b/src/style/widgets.css
@@ -12,6 +12,11 @@
   background: transparent;
 }
 
+.shakingBell.unread {
+  animation: shake-animation 4.72s ease infinite;
+  transform-origin: 50% 50%;
+}
+
 .toast {
   display: flex;
   align-items: center;
@@ -35,5 +40,32 @@
   #pageHeader,
   #widgets {
     display: none;
+  }
+}
+
+@keyframes shake-animation {
+  0% {
+    transform: translate(0, 0);
+  }
+  1.78571% {
+    transform: translate(5px, 0);
+  }
+  3.57143% {
+    transform: translate(0, 0);
+  }
+  5.35714% {
+    transform: translate(5px, 0);
+  }
+  7.14286% {
+    transform: translate(0, 0);
+  }
+  8.92857% {
+    transform: translate(5px, 0);
+  }
+  10.71429% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(0, 0);
   }
 }
