--- a/src/style/queue.css
+++ b/src/style/queue.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 
 #enqueueMe {
@@ -34,8 +35,8 @@
 
 .speakerContext {
   display: flex;
-  align-self: flex-end;
-  align-items: flex-end;
+  justify-content: space-between;
+  align-items: center;
   margin: 0 0 4px 2px;
   color: var(--secondaryFontColor);
   visibility: hidden;
@@ -43,6 +44,19 @@
 
 .speakerContext .feedback {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1;
+}
+
+.speakerContext .feedback .reactions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.speakerContext .writeFeedback {
+  font-size: 0.75rem;
+  background: none;
 }
 
 .speakerContext .timer {
@@ -50,9 +64,11 @@
   font-size: 0.65rem;
   min-width: 45px;
   text-align: right;
+  background: none;
+  padding-left: 2px;
 }
 
-.speakerContext .action {
+.speakerContext .reaction {
   font-size: 0.65rem;
   margin: 0;
   min-width: 30px;
