--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -35,3 +35,39 @@
   margin-right: 8px;
   padding-left: 4px;
 }
+
+.modal {
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  color: var(--secondaryFontColor);
+  background: var(--secondaryBackground);
+  position: absolute;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0 10px;
+  box-sizing: border-box;
+}
+
+.modal header {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal header .close {
+  display: flex;
+  justify-content: flex-end;
+  align-self: flex-end;
+  margin: 10px 0px;
+}
+
+.modal .title {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid var(--tertiaryColor);
+  width: fit-content;
+}
