--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -37,8 +37,7 @@
 }
 
 .modal {
-  visibility: hidden;
-  display: flex;
+  display: none;
   flex-direction: column;
   width: 100%;
   height: 100%;
@@ -70,4 +69,23 @@
   padding-bottom: 10px;
   border-bottom: 2px solid var(--tertiaryColor);
   width: fit-content;
+}
+
+.modal.undocked {
+  margin-left: 10px;
+  position: relative;
+  width: 300px;
+}
+
+@media (max-width: 640px) {
+  .modal.undocked {
+    position: fixed;
+    z-index: 2;
+    top: 0px;
+    left: 0px;
+    margin: 0;
+    width: 100vw;
+    height: calc(100vh - var(--footerHeight));
+    background: var(--secondaryBackground);
+  }
 }
