--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -1,8 +1,8 @@
 .pageHeader {
   background: var(--primaryColor);
   color: var(--primaryFontColor);
-  padding: 10px 8px;
-  height: 40px;
+  padding: 0 8px;
+  height: var(--headerHeight);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -36,13 +36,17 @@
   padding-left: 4px;
 }
 
+.pageFooter .restartTimer {
+  font-size: 0.8em;
+}
+
 .modal {
   display: none;
   flex-direction: column;
   width: 100%;
   height: 100%;
   color: var(--secondaryFontColor);
-  background: var(--secondaryBackground);
+  background: var(--secondaryDark);
   position: absolute;
   z-index: 3;
   top: 0;
@@ -78,6 +82,7 @@
 }
 
 @media (max-width: 640px) {
+  .modal,
   .modal.undocked {
     position: fixed;
     z-index: 2;
@@ -86,6 +91,6 @@
     margin: 0;
     width: 100vw;
     height: calc(100vh - var(--footerHeight));
-    background: var(--secondaryBackground);
+    background: var(--secondaryDark);
   }
 }
