--- a/src/style/main.css
+++ b/src/style/main.css
@@ -79,3 +79,12 @@ textarea::placeholder {
 textarea:disabled {
   border: none;
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
