--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -56,6 +56,10 @@
   box-sizing: border-box;
 }
 
+.modal.active {
+  animation: fadeIn 0.25s;
+}
+
 .modal header {
   display: flex;
   flex-direction: column;
