mobile css improvements

--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -97,4 +97,8 @@
     height: calc(100vh - var(--footerHeight));
     background: var(--secondaryDark);
   }
+
+  .modal .title {
+    font-size: 1.1rem;
+  }
 }
