--- a/src/style/feedback.css
+++ b/src/style/feedback.css
@@ -33,13 +33,12 @@
 
 #notificationsList .notificationContent {
   display: block;
+  margin-bottom: 5px;
 }
 
-#notificationsList .notificationAuthor {
+#notificationsList .footer {
   display: block;
-  margin: 5px 0;
   width: fit-content;
-  padding-bottom: 5px;
   font-size: 0.8rem;
   align-self: flex-end;
 }
